JVIP-3205 Complete sign-up front-end

--- a/app/views/congrats.html
+++ b/app/views/congrats.html
@@ -1,4 +1,4 @@
-<div ng-include="'views/gca/progress.html'"></div>
+<div ng-include="'views/progress.html'"></div>
 <span>
     {{ signup }}
 </span>
