--- a/app/views/review.html
+++ b/app/views/review.html
@@ -1,4 +1,4 @@
-<div ng-include="'views/gca/progress.html'"></div>
+<div ng-include="'views/progress.html'"></div>
 
 <form editable-form name="details" novalidate class="well well-large">
     <div class="buttons">
