--- a/app/views/vipconnect-congrats.html
+++ b/app/views/vipconnect-congrats.html
@@ -1,4 +1,4 @@
-<div ng-include="'views/gca/progress.html'"></div>
+<div ng-include="'views/progress.html'"></div>
 
 <div class="row-fluid">
     <div class="span12">
