JVIP-3204 Complete sign-up redesign
Fix DLG emails

--- a/app/views/dlg-landing.html
+++ b/app/views/dlg-landing.html
@@ -21,7 +21,7 @@
             <label class="control-label">Your Direct Line number</label>
             <div class="controls">
                 <input type="text"
-                    ng-model="dlg.number"
+                    ng-model="signup.dlg.number"
                     required
                     disabled>
             </div>
