JVIP-3204 Complete sign-up redesign
Update terms and privacy policy

--- a/app/views/privacy.html
+++ b/app/views/privacy.html
@@ -70,7 +70,7 @@
         <li>
             <p>You can manage your VIP account online. To change your marketing
                 preferences, log into your account at <a href=
-                    "https://joinvip.com">joinvip.com</a>. Go to 'Manage Account' and
+                    "/">joinvip.com</a>. Go to 'Manage Account' and
                 click on 'Email &amp; Subscriptions'</p>
         </li>
         <li>
@@ -79,7 +79,7 @@
                     "mailto:privacypolicy@joinvip.com">privacypolicy@joinvip.com</a> or
                 by writing to us at:<br>
                 <br>
-                <a href="https://joinvip.com">VIP Communications, Inc.</a><br>
+                <a href="/">VIP Communications, Inc.</a><br>
                 Attn: Customer Service<br>
                 45189 Research Pl #100<br>
                 Ashburn, VA 20146-2694<br>
@@ -109,7 +109,7 @@
         <strong>How Do I Access My Information?</strong><br>
         <br>
         You may access and modify your personal information by visiting
-        <a href="https://joinvip.com">joinvip.com</a>or by contacting our
+        <a href="/">joinvip.com</a> or by contacting our
         Customer Service Center on 1-800-836-5004 and providing the
         necessary security information to allow access to your account
         information.<br>
@@ -162,7 +162,7 @@
         <br>
         This policy does not modify or alter any applicable agreement you
         have with VIP. For example our <a href=
-            "https://joinvip.com/main/terms.php">Terms and Conditions</a>govern
+            "/terms-conditions">Terms and Conditions</a> govern
         your use of our services and the VIP Web site. If this policy
         conflicts with the Terms and Conditions, the Terms and Conditions
         govern to the extent of the inconsistency.<br>
@@ -183,7 +183,7 @@
             "mailto:privacypolicy@joinvip.com">privacypolicy@joinvip.com</a>.
         You may also direct your privacy-related comments or questions
         to:</p>
-    <p><a href="https://joinvip.com">VIP Communications, Inc.</a><br>
+    <p><a href="/">VIP Communications, Inc.</a><br>
         Attn: Customer Service<br>
         45189 Research Pl #100<br>
         Ashburn, VA 20146-2694<br>
