--- a/app/views/terms.html
+++ b/app/views/terms.html
@@ -32,7 +32,7 @@ referred to as 'VIP Services')
 
   <ol start="3">
     <li>CHANGES TO THESE TERMS: VIP may make changes to these Terms from time to time. VIP will publish these changes
-    on our website at <a href="http://www.joinvip.com/mobilerecharge/terms">www.joinvip.com/mobilerecharge/terms</a>.
+    on our website at <a href="/terms-conditions">joinvip.com/terms-conditions</a>.
     All changes will be effective when published. Please make sure to check the Terms regularly for updates. You
     understand and agree that your acceptance of these Terms shall also constitute your agreement to the updated Terms.
     If you do not agree with the updated Terms you may terminate your relationship with VIP in accordance with
@@ -274,7 +274,7 @@ referred to as 'VIP Services')
 
   <p>If you have any questions about these Terms and Conditions, please contact us on our US Customer Service number
   1-800-836-5004, or from other locations click here for a list of customer service numbers: <a href=
-  "https://www.joinvip.com/main/inter.php">https://www.joinvip.com/main/inter.php</a>
+  "/access-numbers">https://joinvip.com/access-numbers</a>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary btn-large" ng-click="ok()">Close</button>
