JVIP-3204 Complete sign-up redesign
Update congrats page with correct links

--- a/app/views/congrats.html
+++ b/app/views/congrats.html
@@ -6,8 +6,8 @@
         <p ng-if="signup.offer == 'minutes'">You're ready to try VIP for free.</p>
         <p ng-if="signup.offer == 'dollars'">You're ready to make your first call from {{signup.user.phoneNumber}}.</p>
         <ul ng-if="(signup.callingMethod === 'iPhone' || signup.callingMethod === 'Android')">
-            <li ng-if="signup.callingMethod === 'Android'">Download VIPConnect <a href="https://play.google.com/store/apps/details?id=com.vipaccess.vipconnect">here</a>.
-            <li ng-if="signup.callingMethod === 'iPhone'">Download VIPConnect <a href="itms://itunes.com/apps/vipconnect">here</a>.
+            <li ng-if="signup.callingMethod === 'Android'">Download VIPConnect <a href="https://play.google.com/store/apps/details?id=com.vipaccess.vipconnect" target="_blank">here</a>.
+            <li ng-if="signup.callingMethod === 'iPhone'">Download VIPConnect <a href="itms://itunes.com/apps/vipconnect" target="_blank">here</a>.
             <ul>
                 <li>Log in using your phone number and the password you set up
             </ul>
@@ -19,8 +19,8 @@
             <li ng-if="!signup.contact.firstName && signup.contact.phoneNumber">Dial <h3 style="display:inline"><a href="tel:+17037968000">703-796-8000</a></h3><sup>*</sup>
             <li ng-if="!signup.contact.firstName">Dial your number: e.g. 011+Country Code+Number
             <li ng-if="dlg.number">Give {{ signup.contact.firstName || 'your friends' }} your Direct Line Ghana Number: <h3 style="display:inline"><a href="tel:{{ dlg.number }}">{{ dlg.number }}</a></h3> and have them call you.
-            <li ng-if="!dlg.number || signup.offer !== 'minutes'">Make dialing easier, <a href="#">click here</a> to get local numbers for all of your contacts!
-            <li ng-if="signup.offer !== 'minutes'">Don't get caught short of calling credit. <a href="#">Click here</a> to add credit to your account.
+            <li ng-if="!dlg.number || signup.offer !== 'minutes'">Make dialing easier, <a href="/myaccount/speedDial.php">click here</a> to get local numbers for all of your contacts!
+            <li ng-if="signup.offer !== 'minutes'">Don't get caught short of calling credit. <a href="/myaccount/topup.php">Click here</a> to add credit to your account.
             <li ng-if="signup.offer === 'minutes'">Your first 5 minutes are FREE. If you want to talk for longer, <a href ui-sref="gca.payment">click here</a> to add credit to your account.
         </ul>
     </span>
@@ -65,16 +65,16 @@
 
     <div class="form-actions">
         <button class="btn btn-primary btn-large" ui-sref="gca.payment" ng-if="signup.offer == 'minutes' && !signup.payment.successful">Add Credit</button>
-        <button class="btn btn-primary btn-large" ng-if="signup.offer != 'minutes' && signup.activation" onclick="window.location = 'https://www.lilinux.joinvip.com/myaccount/login.php'">Login</button>
+        <button class="btn btn-primary btn-large" ng-if="signup.offer != 'minutes' && signup.activation" onclick="window.location = '/myaccount/login.php'">Login</button>
     </div>
 </div>
 
 <div class="row-fluid">
     <div class="span12">
         <div class="span4 text-center"><a href="https://www.facebook.com/VIP.Communications" class="btn btn-large btn-info btn-block">Like us on Facebook</a></div>
-        <div class="span4 text-center" ng-if="signup.callingMethod !== 'iPhone' && signup.callingMethod !== 'Android'"><a href="#" class="btn btn-large btn-info btn-block">Why VIP</a></div>
-        <div class="span4 text-center" ng-if="signup.callingMethod === 'iPhone' || signup.callingMethod === 'Android'"><a href="#" class="btn btn-large btn-info btn-block">How it Works</a></div>
-        <div class="span4 text-center"><a href="#" class="btn btn-large btn-info btn-block">Contact Us</a></div>
+        <div class="span4 text-center" ng-if="signup.callingMethod !== 'iPhone' && signup.callingMethod !== 'Android'"><a href="/why-choose-vip" class="btn btn-large btn-info btn-block">Why VIP</a></div>
+        <div class="span4 text-center" ng-if="signup.callingMethod === 'iPhone' || signup.callingMethod === 'Android'"><a href="/how-it-works" class="btn btn-large btn-info btn-block">How it Works</a></div>
+        <div class="span4 text-center"><a href="/contact-us" class="btn btn-large btn-info btn-block">Contact Us</a></div>
     </div>
 </div> 
 
