JVIP-3204 Complete sign-up redesign
Update links on vipconnect confirmation page

--- a/app/views/vipconnect-congrats.html
+++ b/app/views/vipconnect-congrats.html
@@ -20,8 +20,8 @@
 
 <div class="row-fluid">
     <div ng-class="span12">
-        <div class="span4 text-center"><a href="#" class="btn btn-large btn-block btn-info">How It Works</a></div>
-        <div class="span4 text-center"><a href="#" class="btn btn-large btn-block btn-info">Why VIP</a></div>
-        <div class="span4 text-center"><a href="#" class="btn btn-large btn-block btn-info">Contact VIP</a></div>
+        <div class="span4 text-center"><a href="/how-it-works" class="btn btn-large btn-block btn-info">How It Works</a></div>
+        <div class="span4 text-center"><a href="/why-choose-vip" class="btn btn-large btn-block btn-info">Why VIP</a></div>
+        <div class="span4 text-center"><a href="/contact-us" class="btn btn-large btn-block btn-info">Contact VIP</a></div>
     </div>
 </div>
