--- a/app/views/single-contact.html
+++ b/app/views/single-contact.html
@@ -78,6 +78,7 @@
                 <button type="submit"
                     class="btn btn-primary btn-large"
                     ng-disabled="contactForm.$invalid"
+                    ng-click="contactService.persist()"
                     ui-sref="gca.validate">
                     Get your free call
                 </button>
@@ -92,6 +93,7 @@
                     type="submit"
                     class="btn btn-primary btn-large"
                     ng-disabled="contactForm.$invalid"
+                    ng-click="contactService.persist()"
                     ui-sref="gca.payment">
                     Get $5 free
                 </button>
@@ -99,6 +101,7 @@
                     type="submit"
                     class="btn btn-primary btn-large"
                     ng-disabled="contactForm.$invalid"
+                    ng-click="contactService.persist()"
                     ui-sref="gca.payment">
                     Continue 
                 </button>
