JVIP-3738 Signup / Claim Offer - Change text on button

--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -49,7 +49,7 @@
         </span>
         <span ng-if="signup.payment.promotionCode !== 'JOINVIP5'">
             <div class="span8 offset2">
-                <input type="submit" class="btn btn-front btn-block" value="Open a full account now and claim your offer" ui-sref="gca.step1" ng-click="signup.offer='dollars'"></input>
+                <input type="submit" class="btn btn-front btn-block" value="Claim your offer" ui-sref="gca.step1" ng-click="signup.offer='dollars'"></input>
             </div>
         </span>
     </fieldset>
